--- a/rebar.config
+++ b/rebar.config
@@ -11,5 +11,5 @@
 ]}.
 
 {deps, [
-  {cowboy, "0.9.*", {git, "git://github.com/extend/cowboy.git", {tag, "0.9.0"}}},
+  {cowboy, "0.9.*", {git, "git://github.com/extend/cowboy.git", {tag, "0.9.0"}}}
 ]}.
